# gobomatic

./: .gitignore  LICENSE  README.md  get.py  get.sh  pyproject.toml  tasks.txt
docs/: docs.md
examples/demonstration/: build.py  main.py  project.sb3
examples/testing/: build.py  main.py  project.sb3
gobomatic/: __init__.py  code.py  codeprimitives.py  helpers.py  looks.py  motion.py  operator.py  pen.py  primitives.py  project.py  scratchaddons.py  sensing.py  sound.py
gobomatic/blocks/: __init__.py  control.py  events.py  looks.py  motion.py  operator.py  otherblocks.py  pen.py  sa.py  sensing.py  sound.py
tools/: helper.sb3  sb3dump.py
